@@ -1,0 +1,14 @@
+/*
+ * $Log: direntry.h1,v $
+ * Revision 1.1  2004-10-22 14:59:40+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef DIRENTRY_H
+#define DIRENTRY_H
+
+#include <sys/types.h>
+#include <sys/dir.h>
+#define direntry struct direct
+
+#endif
