@@ -1,0 +1,14 @@
+/*
+ * $Log: direntry.h2,v $
+ * Revision 1.1  2004-10-22 15:00:18+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef DIRENTRY_H
+#define DIRENTRY_H
+
+#include <sys/types.h>
+#include <dirent.h>
+#define direntry struct dirent
+
+#endif
