@@ -1,0 +1,9 @@
+#include <sys/types.h>
+#include <dirent.h>
+
+void
+foo()
+{
+	DIR            *dir;
+	struct dirent  *d;
+}
